рабочая статистика без дизайна

--- a/templates/menu/statistics.html.twig
+++ b/templates/menu/statistics.html.twig
@@ -42,22 +42,22 @@
             <div class="statistics-block">
                 <h3 class="statistics-block__title">blitz mode</h3>
                 <p class="blitz__game-count">количество игр: </p>
-                <p class="blitz__max-scoret">максимальное количество очков: </p>
+                <p class="blitz__max-score">максимальное количество очков: </p>
                 <p class="blitz__total-score">суммарное количество очков:</p>
 
                 <h3 class="statistics-block__title">40lines mode</h3>
-                <p class="40l__game-count">количество игр: </p>
-                <p class="40l__max-scoret">максимальное количество очков: </p>
-                <p class="40l__total-score">суммарное количество очков:</p>
+                <p class="lines__game-count">количество игр: </p>
+                <p class="lines__max-score">максимальное количество очков: </p>
+                <p class="lines__total-score">суммарное количество очков:</p>
 
                 <h3 class="statistics-block__title">bot mode</h3>
                 <p class="bot__game-count">количество игр: </p>
-                <p class="bot__max-scoret">максимальное количество очков: </p>
+                <p class="bot__max-score">максимальное количество очков: </p>
                 <p class="bot__total-score">суммарное количество очков:</p>
 
                 <h3 class="statistics-block__title">co-op mode</h3>
                 <p class="koop__game-count">количество игр: </p>
-                <p class="koop__max-scoret">максимальное количество очков: </p>
+                <p class="koop__max-score">максимальное количество очков: </p>
                 <p class="koop__total-score">суммарное количество очков:</p>
             </div>
             <div class="back">
