--- a/templates/game/game-over.html.twig
+++ b/templates/game/game-over.html.twig
@@ -24,9 +24,9 @@
 						Ваш браузер не поддерживает встроенные видео :(
 					</video>
 				</div>
-				<div class="link">
+				<a class="link">
 					<p class="link__header again" id="link__back">сыграть заново</p>
-				</div>
+				</a>
 				<a href="/menu" class="link">
 					<p class="link__header menu">вернуться в меню</p>
 				</a>
