--- a/templates/select_modes/select-solo-mode.html.twig
+++ b/templates/select_modes/select-solo-mode.html.twig
@@ -74,7 +74,7 @@
 					</p>
 				</div>
 			</a>
-			<a href="/select_koop_mode" class="link koop link_with-image">
+			<a href="/koop" class="link koop link_with-image">
 				<div class="img-placeholder">
 					<img src="/images/koop.png" alt="koop" class="link__image">
 				</div>
