--- a/templates/menu/about.html.twig
+++ b/templates/menu/about.html.twig
@@ -20,7 +20,7 @@
 			</a>
 			<div class="links">
 				<div class="link">
-					<a href="/profile/Слава">
+					<a href="/profile/СЛАВА">
 						<div class="link__text">
 							<p class="link__title">
 								ростислав глизерин
@@ -32,7 +32,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/profile/Иван">
+					<a href="/profile/ИВАН">
 						<div class="link__text">
 							<p class="link__title">
 								иван березин
@@ -44,7 +44,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/profile/Елисей">
+					<a href="/profile/ЕЛИСЕЙ">
 						<div class="link__text">
 							<p class="link__title">
 								елисей карамышев
@@ -56,7 +56,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/profile/Дима">
+					<a href="/profile/ДИМА">
 						<div class="link__text">
 							<p class="link__title">
 								дмитрий беляев
@@ -68,7 +68,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/profile/Никита">
+					<a href="/profile/НИКИТА">
 						<div class="link__text">
 							<p class="link__title">
 								никита дудинов
