--- a/templates/menu/statistics.html.twig
+++ b/templates/menu/statistics.html.twig
@@ -10,7 +10,9 @@
 {% block content %}
     <header class="header">
         <input class="player_id" type="hidden" value="{{ player.id }}">
-        <img src="/images/settings.png" alt="settings" class="header__settings">
+        <a href="/settings">
+            <img src="/images/settings.png" alt="settings" class="header__settings">
+        </a>
         <a href="/logout">
             <img src="/images/exit-logo.svg" alt="exit" class="header__exit">
         </a>
@@ -20,81 +22,81 @@
             <h2 class="other-information__title">статистика</h2>
             <div class="statistics-block">
                 <div class="general-results">
-                    <h3 class="statistics-block__title">classic mode</h3>
+                    <h3 class="statistics-block__title classic">classic mode</h3>
                     <div class="statistics-block">
-                        <p class="classic__game-count">количество игр: </p>
+                        <p class="game-count">количество игр: </p>
                         <p class="classic__game-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="classic__max-score">максимальное количество очков: </p>
+                        <p class="max-score">максимальное количество очков: </p>
                         <p class="classic__max-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="classic__total-score">суммарное количество очков:</p>
+                        <p class="total-score">суммарное количество очков:</p>
                         <p class="classic__total-value">0</p>
                     </div>                    
                 </div>
 
                 <div class="general-results">
-                    <h3 class="statistics-block__title">blitz mode</h3>
+                    <h3 class="statistics-block__title blitz">blitz mode</h3>
                     <div class="statistics-block">
-                        <p class="blitz__game-count">количество игр: </p>
+                        <p class="game-count blitz">количество игр: </p>
                         <p class="blitz__game-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="blitz__max-score">максимальное количество очков: </p>
+                        <p class="max-score blitz">максимальное количество очков: </p>
                         <p class="blitz__max-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="blitz__total-score">суммарное количество очков:</p>
+                        <p class="total-score blitz">суммарное количество очков:</p>
                         <p class="blitz__total-value">0</p>
                     </div>                    
                 </div>
                 
                 <div class="general-results">
-                    <h3 class="statistics-block__title">40lines mode</h3>
+                    <h3 class="statistics-block__title lines">40lines mode</h3>
                     <div class="statistics-block">
-                        <p class="lines__game-count">количество игр: </p>
+                        <p class="game-count lines">количество игр: </p>
                         <p class="lines__game-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="lines__max-score">максимальное количество очков: </p>
+                        <p class="max-score lines">максимальное количество очков: </p>
                         <p class="lines__max-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="lines__total-score">суммарное количество очков:</p>
+                        <p class="total-score lines">суммарное количество очков:</p>
                         <p class="lines__total-value">0</p>
                     </div>                    
                 </div>
 
                 <div class="general-results">
-                    <h3 class="statistics-block__title">bot mode</h3>
+                    <h3 class="statistics-block__title bot">bot mode</h3>
                     <div class="statistics-block">
-                        <p class="bot__game-count">количество игр: </p>
+                        <p class="game-count bot">количество игр: </p>
                         <p class="bot__game-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="bot__max-score">максимальное количество очков: </p>
+                        <p class="max-score bot">максимальное количество очков: </p>
                         <p class="bot__max-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="bot__total-score">суммарное количество очков:</p>
+                        <p class="total-score bot">суммарное количество очков:</p>
                         <p class="bot__total-value">0</p>
                     </div>                    
                 </div>
 
                 <div class="general-results">
-                    <h3 class="statistics-block__title">co-op mode</h3>
+                    <h3 class="statistics-block__title koop">co-op mode</h3>
                     <div class="statistics-block">
-                        <p class="koop__game-count">количество игр: </p>
+                        <p class="game-count koop">количество игр: </p>
                         <p class="koop__game-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="koop__max-score">максимальное количество очков: </p>
+                        <p class="max-score koop">максимальное количество очков: </p>
                         <p class="koop__max-value">0</p>
                     </div>
                     <div class="statistics-block">
-                        <p class="koop__total-score">суммарное количество очков:</p>
+                        <p class="total-score koop">суммарное количество очков:</p>
                         <p class="koop__total-value">0</p>
                     </div>                    
                 </div>
