--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -14,8 +14,6 @@
 .bg {
     height: 100vh;
     width: 100vw;
-    background: url("https://i.postimg.cc/1zyHTmtK/bg.png") no-repeat;
-    background-size: cover;
 }
 
 .header {
@@ -25,7 +23,7 @@
 }
 
 .logo {
-    
+
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
@@ -79,12 +77,12 @@
 }
 
 .settings {
-    max-width: 1050px;
+    max-width: 950px;
     width: 100%;
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 .settings__text {
@@ -106,7 +104,7 @@
     display: none;
 }
 
-body.host .triangle{
+body.host .triangle {
     display: flex
 }
 
@@ -243,7 +241,18 @@ body.host .settings__background {
     border-top: 3px solid #453351;
     border-left: 3px solid #392e40;
     border-bottom: 3px solid #0a080b;
+    transform: translateX(0);
+    filter: brightness(1);
+    transition: .5s transform, .5s filter;
 }
+
+.menu__item:hover {
+    transform: translateX(-2em);
+    filter: brightness(1.2);
+    transition: .2s transform, .2s filter;
+    padding-right: 4em;
+}
+
 .start-game-panel {
     position: absolute;
     bottom: 0px;
@@ -255,15 +264,43 @@ body.host .settings__background {
     width: 100%;
     height: 60px;
 }
+
 .start-game {
     color: #b190e2;
     background: none;
     display: none;
 }
 
-body.host .start-game{
+.setting:hover .line-settings {
+    background-color: #b190e2;
+}
+
+.setting:hover .settings__text-size {
+    color: #b190e2;
+}
+
+.setting:hover .settings__text-music {
+    color: #b190e2;
+}
+
+.setting:hover .settings__text-difficulty {
+    color: #b190e2;
+}
+
+.setting:hover .settings__text-bg {
+    color: #b190e2;
+}
+
+.start-game:hover {
+    text-shadow: 0 0 1px white;
+    cursor: pointer;
+}
+
+
+body.host .start-game {
     display: flex;
 }
+
 .item__title {
     color: #dac8e7;
 }
@@ -290,5 +327,17 @@ body.host .start-game{
 
 .player__button {
     background-color: #1a161d;
+    font-size: 16px;
+}
+
+.kick__button {
+    width: 50px;
+    height: 28px;
+    border-radius: 3px;
+    background-color: #1a161d;
+    border-top: 3px solid #453351;
+    border-left: 3px solid #392e40;
+    border-bottom: 3px solid #0a080b;
+    color: #b190e2;
     font-size: 16px;
 }
