накинул cursor pointer

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -89,6 +89,7 @@ main{
     border-left: 3px solid #392e40;
     border-bottom: 3px solid #0a080b;
     gap: 10px;
+    cursor: pointer;
 }
 
 .item__title{
