--- a/templates/menu/settings.html.twig
+++ b/templates/menu/settings.html.twig
@@ -11,7 +11,9 @@
         <a href="/">
             <img src="/images/home.png" alt="menu" class="menu-img"/>
         </a>
-		<img src="/images/logo.png" alt="logo" class="logo"/>
+        <a href="/menu">
+		    <img src="/images/logo.png" alt="logo" class="logo"/>
+        </a>
 		<div class="profile">
 			{% if player is not defined %}
 				<a href="{{ path('register') }}">
