--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -97,6 +97,7 @@ main {
 .settings__item:hover,
 .settings__item-language:hover,
 .settings__item-bg:hover {
+    cursor: pointer;
     transform: translateX(-2em);
     filter: brightness(1.2);
     transition: .2s transform, .2s filter;
