--- a/templates/menu/profile.html.twig
+++ b/templates/menu/profile.html.twig
@@ -34,7 +34,7 @@
                     <span class="count-win-game title">↪ выиграно из них</span><span class="count-win-game"> {{ player.statistics.winCount }}</span>
                 </div>
             </div>
-            <a href="/statistics/{{player.user.login}}">посмотреть ВСЮ СТАТИСТИКУ</a>
+            <a href="/statistics/{{player.user.login}}" class="all-statistic-view">посмотреть ВСЮ СТАТИСТИКУ</a>
         </div>
         <div class="other-information">
             <h2 class="other-information__title">достижения</h2>
