Исправлен незакрытый заголовок

--- a/templates/multiplayer/list_lobby.html.twig
+++ b/templates/multiplayer/list_lobby.html.twig
@@ -13,7 +13,7 @@
 		<div class="header">
 			{% include 'header.html.twig' %}
 		</div>
-		<h1 class="list-title">Список лобби<h1>
+		<h1 class="list-title">Список лобби</h1>
 		<div class="menu"></div>
 		{% include 'mini-profile.html.twig' %}
 	</div>
