--- a/templates/menu/leaderboard.html.twig
+++ b/templates/menu/leaderboard.html.twig
@@ -23,13 +23,13 @@
 			<div class="max__win">
 				<div class="menu__title">
 					<h1>max win</h1>
-					<h2>топ игроков по максимальному количеству побед</h2>
+					<h2>топ игроков по количеству побед</h2>
 				</div>
 			</div>
 			<div class="max__total">
 				<div class="menu__title">
 					<h1>max total score</h1>
-					<h2>топ игроков по максимальному суммарному счету</h2>
+					<h2>топ игроков по суммарному счету</h2>
 				</div>
 			</div>
 		</div>	
