--- a/templates/mini-profile.html.twig
+++ b/templates/mini-profile.html.twig
@@ -14,10 +14,10 @@
         </div>  
     </div>
     <div class="statistics">
-        <div class="max-score">
+        <div class="maximum-score">
             <p class="statistics__text score">максимум очков</p>
             <div class="line"></div>
-            <p>{{player.statistics.maxScore ?? '0'}}</p>
+            <p>{{player.statistics.winCount ?? '0'}}</p>
         </div>
         <div class="count-win">
             <p class="statistics__text vincount">всего побед</p>
